[IntersectionObserver] Enable observations across shadow DOM roots.

BUG=638434
R=ojan@chromium.org,eae@chromium.org

Review-Url: https://codereview.chromium.org/2298933003
Cr-Commit-Position: refs/heads/master@{#415839}

Former-commit-id: 257e833d93e4f9c7ed1cad01bcae892e6db79cde